--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,231 @@
-.hidden {
-    display:none
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: "Archivo", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
-img {
-    position:absolute;
-    width:100%;
-    height:100%;
-    left: 0px;
-    top: 0px;
-    right:0px;
-    bottom:0px;
-    z-index: -1;
-    opacity:80%;
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 230px;
+}
+
+#name {
+  width: 240px;
+  height: 40px;
+  border: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  font-size: large;
+  text-align: center;
+}
+
+#name:focus {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #696ba0;
+  transition: 0.5s ease-in-out;
+}
+
+.loginBtn {
+  margin: 20px;
+  width: 150px;
+  height: 30px;
+  border-radius: 30px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  background-color: white;
+  font-size: large;
+  font-weight: 600;
+}
+
+.loginBtn:hover {
+  border: 2px solid #696ba0;
+}
+
+.mainBg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: -1;
+  opacity: 80%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#Box {
+  width: 1250px;
+  height: 790px;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3em;
+  display: flex;
+}
+
+.hidden {
+  display: none;
+}
+
+/* ▼▼▼ Side Box ▼▼▼ */
+
+#sideBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 410px;
+  height: 790px;
+  box-shadow: 5px 2px 6px -5px rgba(0, 0, 0, 0.1);
+  font-weight: 600;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  height: 2em;
+  font-size: 65px;
+  font-weight: 700;
+  margin-top: 1.5em;
+}
+
+.user {
+  display: flex;
+  justify-content: center;
+  width: 350px;
+  margin: 1em 0;
+  font-size: xx-large;
+}
+
+.time {
+  width: 150px;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.time span {
+  font-size: 30px;
+  padding: 30px 20px;
+}
+
+#clock {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  font-size: large;
+  margin-bottom: 10px;
+}
+
+.timeImg {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+
+.weatherTitle {
+  display: flex;
+  align-items: center;
+  font-size: large;
+  height: 50px;
+  margin: 18px;
+}
+
+.weatherTitle span {
+  font-size: 30px;
+  padding: 30px 20px;
+}
+
+.weatherImg {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+
+#weather {
+  width: 230px;
+  height: 130px;
+  border: 2px solid #696ba0;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ▼▼▼ Main Bar ▼▼▼ */
+
+#mainBox {
+  width: 840px;
+  position: relative;
+}
+
+#todo-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+  z-index: 2;
+}
+
+.todoInput {
+  border: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  width: 450px;
+  height: 50px;
+  text-align: center;
+}
+
+.todoInput:focus {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #696ba0;
+  transition: 0.5s ease-in-out;
+}
+
+#todo-list {
+  margin: 20px;
+}
+
+#todo-list li {
+  padding: 20px;
+}
+
+#todo-list button {
+  border: none;
+  background-color: white;
+  font-size: x-large;
+  padding: 0 30px;
+}
+
+#todo-list span {
+  font-size: large;
+}
+
+#quotes {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #696ba0;
+  border-radius: 15px;
+  width: 750px;
+  height: 60px;
+  top: 690px;
+  right: 45px;
+  background-color: white;
+}
+
+#quotes span {
+  padding: 0 20px;
 }
